--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@unhead/vue": "^2.0.11",
     "eslint": "^9.30.1",
     "nuxt": "^3.17.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
-  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+  "packageManager": "pnpm@10.12.4",
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.2.55",
+    "@iconify-json/simple-icons": "^1.2.41"
+  }
 }
